examples/test/testpolicy1774.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1774
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key29: value39
      key43: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value37
          key17: value3
          key22: value5
      podSelector:
        matchLabels:
          key14: value29
